Merge utilities; fix automatic name calculation